test/types/records/ferguson/choose-record/choose-record10.good
choose-record10.chpl:20: error: capturing constant value as ref
